# BioKG-Align-kit

./: .gitignore  README.md  pyproject.toml
docs/: CNAME  _config.yml  index.html  styles.css
examples/mini/graph/: properties.csv  triples.csv
examples/mini/tasks/NCIT-DOID/: test.cands.tsv  valid.cands.tsv
src/biokg_align_kit/: __init__.py  baselines.py  cli.py  data.py  io.py  scoring.py  text.py  validation.py
tests/: test_kit.py
